# drcom-client-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: build.yml
config/: drcom_jlu.conf  drcom_test.conf
mock_server/: CMakeLists.txt  mock_drcom_server.cpp
src/: CMakeLists.txt  client.cpp  config.cpp  crypto.cpp  logger.cpp  main.cpp  network.cpp
src/include/drcom/: client.h  config.h  crypto.h  drcom.h  logger.h  network.h
